# STAY-old

./: .gitignore  CMakeLists.txt  Stay.sln  Stay.vcxproj  Stay.vcxproj.filters  Untitled.cpp  Untitled.sln  Untitled.vcxproj
STAY/code/source/: application.cpp  main.cpp  world.cpp
header/: application.hpp  world.hpp
header/Core/: application.hpp  coreAlias.hpp  resourceHolder.hpp  world.hpp
header/Core/ECS/: componentArray.hpp  componentManager.hpp  componentType.hpp  engine.hpp  entity.hpp  entityManager.hpp  system.hpp  systemManager.hpp  value.hpp
header/Logic/Component/: componentList.hpp  render.hpp  rigidbody.hpp  transform.hpp
header/Logic/Loader/: textureHolder.hpp
header/Logic/System/: ecsInit.hpp  renderSystem.hpp  rigidSystem.hpp  systemList.hpp
resource/level/: movement.ldtk  playground.ldtk
source/: main.cpp  world.cpp
source/Core/: application.cpp  world.cpp
source/Core/ECS/: componentArray.cpp  componentManager.cpp  engine.cpp  entityManager.cpp  system.cpp  systemManager.cpp
source/Logic/System/: ecsInit.cpp
src/header/: world.hpp
src/header/Core/: coreAlias.hpp  resourceHolder.hpp
src/header/Core/ECS/: componentArray.hpp  componentManager.hpp  entityManager.hpp  systemManager.hpp  value.hpp
src/header/Helper/: utilise.hpp
src/header/Logic/Character/: characterState.hpp  hookState.hpp  normalState.hpp
src/header/Logic/Component/: collider.hpp  componentList.hpp  control.hpp  hook.hpp  render.hpp  rigidbody.hpp  transform.hpp
src/header/Logic/Loader/: mapLoader.hpp
src/source/: application.cpp  main.cpp  world.cpp
(+50 files in other folders)
